Intro_to_PyG.ipynb

--- a/Intro_to_PyG.ipynb
+++ b/Intro_to_PyG.ipynb
@@ -9,7 +9,7 @@
         "***\n",
         "***\n",
         "\n",
-        "# Assignment 1 - Introduction to PyG\n",
+        "# Introduction to PyG\n",
         "\n",
         "This assignment tests basic control over the PyG and NetworkX module which are commonly used to implement Geometric Deep Learning."
       ]
